--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ decorator==5.1.1
 Django==3.2.13
 django-bootstrap5==22.1
 django-extensions==3.2.1
+django-imagekit==4.1.0
 executing==1.1.1
 ipython==8.5.0
 jedi==0.18.1
