--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-bootstrap5==22.1
 django-extensions==3.2.1
 django-imagekit==4.1.0
 django-shortcuts==1.6
+djangorestframework==3.14.0
 executing==1.1.1
 idna==3.4
 ipython==8.5.0
