--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-imagekit==4.1.0
 django-shortcuts==1.6
 djangorestframework==3.14.0
 executing==1.1.1
+haversine==2.7.0
 idna==3.4
 ipython==8.5.0
 jedi==0.18.1
