--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ Django==3.2.13
 django-allauth==0.51.0
 django-appconf==1.0.5
 django-bootstrap5==22.1
+django-ckeditor==6.5.1
 django-extensions==3.2.1
 django-imagekit==4.1.0
+django-js-asset==2.0.0
 django-shortcuts==1.6
 djangorestframework==3.14.0
 executing==1.1.1
