--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asttokens==2.0.8
 backcall==0.2.0
 beautifulsoup4==4.11.1
 black==22.10.0
+boto3==1.26.26
+botocore==1.29.26
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -15,17 +17,17 @@ Django==3.2.13
 django-allauth==0.51.0
 django-appconf==1.0.5
 django-bootstrap5==22.1
-django-ckeditor==6.5.1
 django-extensions==3.2.1
 django-imagekit==4.1.0
-django-js-asset==2.0.0
 django-shortcuts==1.6
+django-storages==1.13.1
 djangorestframework==3.14.0
 executing==1.1.1
 haversine==2.7.0
 idna==3.4
 ipython==8.5.0
 jedi==0.18.1
+jmespath==1.0.1
 matplotlib-inline==0.1.6
 mypy-extensions==0.4.3
 oauthlib==3.2.2
@@ -36,15 +38,18 @@ pilkit==2.0
 Pillow==9.2.0
 platformdirs==2.5.4
 prompt-toolkit==3.0.31
+psycopg2-binary==2.9.5
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
 PyJWT==2.6.0
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.4
 requests==2.28.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
